--- a/index.html
+++ b/index.html
@@ -17,5 +17,9 @@
     <title>Name</title>
   </head>
 
-  <body></body>
+  <body>
+    <div id="wrap">
+      <main></main>
+    </div>
+  </body>
 </html>
