--- a/index.html
+++ b/index.html
@@ -45,7 +45,13 @@
           </header>
 
           <!-- NOTIFICATION -->
-          <div class="notification"></div>
+          <div class="notification d-flex align-items-center">
+            <a href="#" id="bell-notification"><i class="fa-solid fa-bell-slash"></i></a>
+            <div class="ms-3 text-notification">
+              <h5 class="m-0">Ricevi notifiche dei nuovi messaggi</h5>
+              <a href="#">Attiva notifiche desktop</a>
+            </div>
+          </div>
 
           <!-- SEARCH BAR -->
           <div class="search-bar"></div>
@@ -57,6 +63,8 @@
         <!-- MAIN -->
         <main>
           <!-- CURRENT CHAT USER -->
+
+          <!-- Header -->
           <header class="chat-header">
             <div class="user d-flex align-items-center">
               <img class="user-img me-2" src="img/avatar_1.jpg" alt="user-image" />
@@ -71,7 +79,11 @@
               <a href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
             </div>
           </header>
+
+          <!-- Content -->
           <div class="chat-content"></div>
+
+          <!-- Text Area Message -->
           <div class="input-area"></div>
         </main>
       </div>
