--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@
           </div>
 
           <!-- SEARCH BAR -->
-          <div class="search-bar"></div>
+          <div class="search-bar p-3">
+            <div class="input-group">
+              <label class="input-group-text" for="filter-input"><i class="fa-solid fa-magnifying-glass"></i></label>
+              <input type="text" class="form-control" id="filter-input" placeholder="Cerca o inizia una nuova chat" />
+            </div>
+          </div>
 
           <!-- CONTACTS -->
           <div class="contacts"></div>
