Add contacts preview

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <!-- USER -->
           <header class="aside-header">
             <div class="user d-flex align-items-center">
-              <img class="user-img me-2" src="img/avatar_1.jpg" alt="user-image" />
+              <img class="user-img" src="img/avatar_1.jpg" alt="user-image" />
               <h5 class="user-name m-0">Andrea</h5>
             </div>
             <div class="user-icon">
@@ -62,7 +62,24 @@
           </div>
 
           <!-- CONTACTS -->
-          <div class="contacts"></div>
+          <div class="contacts">
+            <div class="preview-chat">
+              <img class="me-3" src="img/avatar_2.jpg" alt="user-image" />
+              <h4>Michele</h4>
+            </div>
+            <div class="preview-chat">
+              <img class="me-3" src="img/avatar_3.jpg" alt="user-image" />
+              <h4>Fabio</h4>
+            </div>
+            <div class="preview-chat">
+              <img class="me-3" src="img/avatar_4.jpg" alt="user-image" />
+              <h4>Samuele</h4>
+            </div>
+            <div class="preview-chat">
+              <img class="me-3" src="img/avatar_5.jpg" alt="user-image" />
+              <h4>Luisa</h4>
+            </div>
+          </div>
         </aside>
 
         <!-- MAIN -->
@@ -72,7 +89,7 @@
           <!-- Header -->
           <header class="chat-header">
             <div class="user d-flex align-items-center">
-              <img class="user-img me-2" src="img/avatar_1.jpg" alt="user-image" />
+              <img class="user-img" src="img/avatar_1.jpg" alt="user-image" />
               <div class="user-info">
                 <h5 class="user-name m-0">Andrea</h5>
                 <div class="last-access">Ultimo accesso oggi alle</div>
