--- a/index.html
+++ b/index.html
@@ -106,7 +106,11 @@
           <div class="chat-content"></div>
 
           <!-- Text Area Message -->
-          <div class="input-area"></div>
+          <div class="input-area">
+            <a href="#" class="emojy"><i class="fa-regular fa-face-smile"></i></a>
+            <input type="text" class="input-message" placeholder="Scrivi un messaggio" />
+            <a href="#" class="vocal"><i class="fa-solid fa-microphone"></i></a>
+          </div>
         </main>
       </div>
     </div>
