Complete first milestone

--- a/index.html
+++ b/index.html
@@ -91,7 +91,14 @@
           </header>
 
           <!-- Content -->
-          <div class="chat-content"></div>
+          <div class="chat-content p-4">
+            <div class="received">
+              <div class="message received">Ciao</div>
+            </div>
+            <div class="sent">
+              <div class="message send">Ciao me</div>
+            </div>
+          </div>
 
           <!-- Text Area Message -->
           <div class="input-area">
