--- a/index.html
+++ b/index.html
@@ -25,88 +25,90 @@
     <title>Name</title>
   </head>
 
-  <body id="root">
-    <div id="wrap">
-      <!-- MAIN LAYOUT -->
-      <div id="main-layout">
-        <!-- ASIDE -->
-        <aside>
-          <!-- USER -->
-          <header class="aside-header">
-            <div class="user d-flex align-items-center">
-              <img class="user-img" :src="`img/avatar${user.avatar}.jpg`" alt="user-image" />
-              <h5 class="user-name m-0">{{user.name}}</h5>
-            </div>
-            <div class="user-icon">
-              <a href="#"><i class="fa-solid fa-circle-notch"></i></a>
-              <a href="#"><i class="fa-solid fa-message"></i></a>
-              <a href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
-            </div>
-          </header>
+  <body>
+    <div id="root">
+      <div id="wrap">
+        <!-- MAIN LAYOUT -->
+        <div id="main-layout">
+          <!-- ASIDE -->
+          <aside>
+            <!-- USER -->
+            <header class="aside-header">
+              <div class="user d-flex align-items-center">
+                <img class="user-img" :src="`img/avatar${user.avatar}.jpg`" alt="user-image" />
+                <h5 class="user-name m-0">{{user.name}}</h5>
+              </div>
+              <div class="user-icon">
+                <a href="#"><i class="fa-solid fa-circle-notch"></i></a>
+                <a href="#"><i class="fa-solid fa-message"></i></a>
+                <a href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
+              </div>
+            </header>
 
-          <!-- NOTIFICATION -->
-          <div class="notification d-flex align-items-center">
-            <a href="#" id="bell-notification"><i class="fa-solid fa-bell-slash"></i></a>
-            <div class="ms-3 text-notification">
-              <h5 class="m-0">Ricevi notifiche dei nuovi messaggi</h5>
-              <a href="#">Attiva notifiche desktop</a>
-            </div>
-          </div>
-
-          <!-- SEARCH BAR -->
-          <div class="search-bar p-3">
-            <div class="input-group">
-              <label class="input-group-text" for="filter-input"><i class="fa-solid fa-magnifying-glass"></i></label>
-              <input type="text" class="form-control" id="filter-input" placeholder="Cerca o inizia una nuova chat" />
-            </div>
-          </div>
-
-          <!-- CONTACTS -->
-          <div class="contacts">
-            <div v-for="contact in contacts" class="preview-chat">
-              <img class="me-3" :src="`img/avatar${contact.avatar}`" :alt="contact.name" />
-              <h4>{{contact.name}}</h4>
-            </div>
-          </div>
-        </aside>
-
-        <!-- MAIN -->
-        <main>
-          <!-- CURRENT CHAT USER -->
-
-          <!-- Header -->
-          <header class="chat-header">
-            <div class="user d-flex align-items-center">
-              <img class="user-img" src="img/avatar_1.jpg" alt="user-image" />
-              <div class="user-info">
-                <h5 class="user-name m-0">Andrea</h5>
-                <div class="last-access">Ultimo accesso oggi alle</div>
+            <!-- NOTIFICATION -->
+            <div class="notification d-flex align-items-center">
+              <a href="#" id="bell-notification"><i class="fa-solid fa-bell-slash"></i></a>
+              <div class="ms-3 text-notification">
+                <h5 class="m-0">Ricevi notifiche dei nuovi messaggi</h5>
+                <a href="#">Attiva notifiche desktop</a>
               </div>
             </div>
-            <div class="user-icon">
-              <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
-              <a href="#"><i class="fa-solid fa-paperclip"></i></a>
-              <a href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
-            </div>
-          </header>
 
-          <!-- Content -->
-          <div class="chat-content p-4">
-            <div class="received">
-              <div class="message received">Ciao</div>
+            <!-- SEARCH BAR -->
+            <div class="search-bar p-3">
+              <div class="input-group">
+                <label class="input-group-text" for="filter-input"><i class="fa-solid fa-magnifying-glass"></i></label>
+                <input type="text" class="form-control" id="filter-input" placeholder="Cerca o inizia una nuova chat" />
+              </div>
             </div>
-            <div class="sent">
-              <div class="message send">Ciao me</div>
-            </div>
-          </div>
 
-          <!-- Text Area Message -->
-          <div class="input-area">
-            <a href="#" class="emojy"><i class="fa-regular fa-face-smile"></i></a>
-            <input type="text" class="input-message" placeholder="Scrivi un messaggio" />
-            <a href="#" class="vocal"><i class="fa-solid fa-microphone"></i></a>
-          </div>
-        </main>
+            <!-- CONTACTS -->
+            <div class="contacts">
+              <div v-for="contact in contacts" class="preview-chat">
+                <img class="me-3" :src="`img/avatar${contact.avatar}`" :alt="contact.name" />
+                <h4>{{contact.name}}</h4>
+              </div>
+            </div>
+          </aside>
+
+          <!-- MAIN -->
+          <main>
+            <!-- CURRENT CHAT USER -->
+
+            <!-- Header -->
+            <header class="chat-header">
+              <div class="user d-flex align-items-center">
+                <img class="user-img" src="img/avatar_1.jpg" alt="user-image" />
+                <div class="user-info">
+                  <h5 class="user-name m-0">Andrea</h5>
+                  <div class="last-access">Ultimo accesso oggi alle</div>
+                </div>
+              </div>
+              <div class="user-icon">
+                <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+                <a href="#"><i class="fa-solid fa-paperclip"></i></a>
+                <a href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
+              </div>
+            </header>
+
+            <!-- Content -->
+            <div class="chat-content p-4">
+              <div class="received">
+                <div class="message received">Ciao</div>
+              </div>
+              <div class="sent">
+                <div class="message send">Ciao me</div>
+              </div>
+            </div>
+
+            <!-- Text Area Message -->
+            <div class="input-area">
+              <a href="#" class="emojy"><i class="fa-regular fa-face-smile"></i></a>
+              <input type="text" class="input-message" placeholder="Scrivi un messaggio" />
+              <a href="#" class="vocal"><i class="fa-solid fa-microphone"></i></a>
+            </div>
+          </main>
+        </div>
       </div>
     </div>
   </body>
