Add Vocal Sintax text

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             />
 
             <!--# VOCAL AUDIO -->
-            <a href="#" class="vocal"><i class="fa-solid fa-microphone"></i></a>
+            <a @click="startRecognition" href="#" class="vocal"><i class="fa-solid fa-microphone"></i></a>
           </section>
         </main>
       </div>
